#123 Add User invitation prototype
