# docs/swagger.yaml
@@ -522,6 +522,52 @@ paths:
       summary: Accept or decline Group Invitation
       tags:
       - Invitation
+  /api/invitation/add-user:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Request Body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.InvitationResponseInputDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.GeneralResponseDTO'
+      summary: Add Friend
+      tags:
+      - Invitation
+  /api/invitation/get-invitation/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Invitation ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.GeneralResponseDTO'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.GroupInvitationOutputDTO'
+              type: object
+      summary: Get Invitation
+      tags:
+      - Invitation
   /api/invitation/user/{id}:
     get:
       consumes:
